eliminated unused functions

--- a/notebooks/Data_Reviews_step_2b_data_extraction.ipynb
+++ b/notebooks/Data_Reviews_step_2b_data_extraction.ipynb
@@ -77,36 +77,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@retry(wait=wait_random_exponential(min=1, max=40), stop=stop_after_attempt(3))\n",
-    "def chat_completion_request(messages, functions=None, function_call=None, temperature=0, model=GPT_MODEL):\n",
-    "    headers = {\n",
-    "        \"Content-Type\": \"application/json\",\n",
-    "        \"Authorization\": \"Bearer \" + openai.api_key,\n",
-    "    }\n",
-    "    json_data = {\"model\": model, \"messages\": messages, \"temperature\": temperature}\n",
-    "    if functions is not None:\n",
-    "        json_data.update({\"functions\": functions})\n",
-    "    if function_call is not None:\n",
-    "        json_data.update({\"function_call\": function_call})\n",
-    "    try:\n",
-    "        response = requests.post(\n",
-    "            \"https://api.openai.com/v1/chat/completions\",\n",
-    "            headers=headers,\n",
-    "            json=json_data,\n",
-    "        )\n",
-    "        return response\n",
-    "    except Exception as e:\n",
-    "        print(\"Unable to generate ChatCompletion response\")\n",
-    "        print(f\"Exception: {e}\")\n",
-    "        return e"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -115,38 +85,7 @@
     "    \"\"\"Returns the number of tokens in a text string.\"\"\"\n",
     "    encoding = tiktoken.get_encoding(encoding_name)\n",
     "    num_tokens = len(encoding.encode(string))\n",
-    "    return num_tokens\n",
-    "\n",
-    "def num_tokens_from_messages(messages, model=\"gpt-3.5-turbo\"):\n",
-    "    \"\"\"Returns the number of tokens used by a list of messages.\"\"\"\n",
-    "    try:\n",
-    "        encoding = tiktoken.encoding_for_model(model)\n",
-    "    except KeyError:\n",
-    "        print(\"Warning: model not found. Using cl100k_base encoding.\")\n",
-    "        encoding = tiktoken.get_encoding(\"cl100k_base\")\n",
-    "    if model == \"gpt-3.5-turbo\":\n",
-    "        print(\"Warning: gpt-3.5-turbo may change over time. Returning num tokens assuming gpt-3.5-turbo.\")\n",
-    "        return num_tokens_from_messages(messages, model=\"gpt-3.5-turbo\")\n",
-    "    elif model == \"gpt-4\":\n",
-    "        print(\"Warning: gpt-4 may change over time. Returning num tokens assuming gpt-4\")\n",
-    "        return num_tokens_from_messages(messages, model=\"gpt-4\")\n",
-    "    elif model == \"gpt-3.5-turbo\":\n",
-    "        tokens_per_message = 4  # every message follows <|start|>{role/name}\\n{content}<|end|>\\n\n",
-    "        tokens_per_name = -1  # if there's a name, the role is omitted\n",
-    "    elif model == \"gpt-4\":\n",
-    "        tokens_per_message = 3\n",
-    "        tokens_per_name = 1\n",
-    "    else:\n",
-    "        raise NotImplementedError(f\"\"\"num_tokens_from_messages() is not implemented for model {model}. See https://github.com/openai/openai-python/blob/main/chatml.md for information on how messages are converted to tokens.\"\"\")\n",
-    "    num_tokens = 0\n",
-    "    for message in messages:\n",
-    "        num_tokens += tokens_per_message\n",
-    "        for key, value in message.items():\n",
-    "            num_tokens += len(encoding.encode(value))\n",
-    "            if key == \"name\":\n",
-    "                num_tokens += tokens_per_name\n",
-    "    num_tokens += 3  # every reply is primed with <|start|>assistant<|message|>\n",
-    "    return num_tokens"
+    "    return num_tokens\n"
    ]
   },
   {
@@ -170,27 +109,7 @@
     "        print(f\"Error cleaning review: {e}\")\n",
     "        return \"\"\n",
     "\n",
-    "def get_data_dict(df, limit=3000):\n",
-    "    # Add the asin column to the dataframe\n",
-    "    # df['asin'] = df['asin.original']\n",
     "\n",
-    "    # Split the dataframe into a dictionary of dataframes, one for each unique asin\n",
-    "    asin_dfs = {}\n",
-    "    for asin in df['asin'].unique():\n",
-    "        asin_dfs[asin] = df[df['asin'] == asin]\n",
-    "\n",
-    "    # Process each asin dataframe and add it to a new dictionary\n",
-    "    asin_data = {}\n",
-    "    for asin, asin_df in asin_dfs.items():\n",
-    "        asin_df.loc[:, 'review'] = asin_df['review'].apply(clean_review)\n",
-    "        print(asin_df['review'])\n",
-    "        asin_df.loc[:, 'num_tokens'] = asin_df['review'].apply(num_tokens_from_string)\n",
-    "        asin_df.loc[:, 'review'] = asin_df.apply(lambda x: x['review'][:limit * 3] if x['num_tokens'] > limit else x['review'], axis=1)\n",
-    "        asin_df.loc[:, 'review_num_tokens'] = asin_df['review'].apply(num_tokens_from_string)\n",
-    "        asin_df = asin_df.loc[:, ['id', 'review', 'review_num_tokens', 'asin', 'positive_sentiment', 'negative_sentiment', 'rating']].copy()\n",
-    "        asin_data[asin] = asin_df.copy()\n",
-    "\n",
-    "    return asin_data\n",
     "\n",
     "def initial_review_clean_data(df, limit=3000):\n",
     "    # Add the asin column to the dataframe\n",
