--- a/notebooks/Data_reviews_step_1_AmazonScrapperFinal.ipynb
+++ b/notebooks/Data_reviews_step_1_AmazonScrapperFinal.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "    if result.returncode != 0:\n",
     "        print(\"Error:\", result.stderr)\n",
-    "        return None\n"
+    "        return None"
    ]
   },
   {
