larger data run

--- a/notebooks/Data_Solutions_step_1_problem_description.ipynb
+++ b/notebooks/Data_Solutions_step_1_problem_description.ipynb
@@ -2,15 +2,327 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OPENAI_API_KEY is ready\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "import openai\n",
+    "import json\n",
+    "\n",
+    "import requests\n",
+    "from tenacity import retry, wait_random_exponential, stop_after_attempt\n",
+    "from termcolor import colored\n",
+    "\n",
+    "\n",
+    "load_dotenv()\n",
+    "OPENAI_API_KEY = os.getenv('OPENAI_API_KEY')\n",
+    "HUGGINGFACEHUB_API_TOKEN = os.getenv('HUGGINGFACEHUB_API_TOKEN')\n",
+    "\n",
+    "if os.getenv(\"OPENAI_API_KEY\") is not None:\n",
+    "    print (\"OPENAI_API_KEY is ready\")\n",
+    "else:\n",
+    "    print (\"OPENAI_API_KEY environment variable not found\")\n",
+    "\n",
+    "GPT_MODEL = \"gpt-3.5-turbo-0613\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Read data about the product\n",
+    "\n",
+    "with open('/Users/vladbordei/Documents/Development/ProductExplorer/data/interim/short_product_information.json') as file:\n",
+    "    json_string = file.read()\n",
+    "    general_product_data = json.loads(json_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#asin_list_path = './data/external/asin_list.csv'\n",
+    "asin_list_path = '/Users/vladbordei/Documents/Development/ProductExplorer/data/external/asin_list.csv'\n",
+    "asin_list = pd.read_csv(asin_list_path)['asin'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attribute_clusters_with_percentage_path = '/Users/vladbordei/Documents/Development/ProductExplorer/data/interim/attribute_clusters_with_percentage.csv'\n",
+    "attributes = pd.read_csv(attribute_clusters_with_percentage_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attributes.drop(columns=['Unnamed: 0'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Buyer Motivation',\n",
+       " 'Customer Expectations',\n",
+       " 'Danger Appraisal',\n",
+       " 'Design and Appearance',\n",
+       " 'Durability',\n",
+       " 'Ease of Use',\n",
+       " 'How the product is used',\n",
+       " 'Parts and Components',\n",
+       " 'Price',\n",
+       " 'Quality',\n",
+       " 'Season',\n",
+       " 'Setup and Instructions',\n",
+       " 'Size and Fit',\n",
+       " 'User Description',\n",
+       " 'When the product is used',\n",
+       " 'Where the product is used'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(attributes['Attribute'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Attribute</th>\n",
+       "      <th>cluster_label</th>\n",
+       "      <th>positive_sentiment</th>\n",
+       "      <th>negative_sentiment</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>id</th>\n",
+       "      <th>asin</th>\n",
+       "      <th>URL</th>\n",
+       "      <th>observation_count</th>\n",
+       "      <th>rating_avg</th>\n",
+       "      <th>attribute_percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Customer Expectations</td>\n",
+       "      <td>Durable and easy-to-use raised bed</td>\n",
+       "      <td>0.989524</td>\n",
+       "      <td>0.001497</td>\n",
+       "      <td>[5]</td>\n",
+       "      <td>[6]</td>\n",
+       "      <td>['B09D7QDLYC']</td>\n",
+       "      <td>['https://www.amazon.com/gp/customer-reviews/R...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Customer Expectations</td>\n",
+       "      <td>Durable bed</td>\n",
+       "      <td>0.774938</td>\n",
+       "      <td>0.053037</td>\n",
+       "      <td>[3]</td>\n",
+       "      <td>[3]</td>\n",
+       "      <td>['B0BG2HP1PJ']</td>\n",
+       "      <td>['https://www.amazon.com/gp/customer-reviews/R...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Customer Expectations</td>\n",
+       "      <td>Easy assembly</td>\n",
+       "      <td>0.003215</td>\n",
+       "      <td>0.937854</td>\n",
+       "      <td>[2]</td>\n",
+       "      <td>[9]</td>\n",
+       "      <td>['B0BHS6YL2F']</td>\n",
+       "      <td>['https://www.amazon.com/gp/customer-reviews/R...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Customer Expectations</td>\n",
+       "      <td>Good size and sturdy product</td>\n",
+       "      <td>0.986625</td>\n",
+       "      <td>0.001518</td>\n",
+       "      <td>[5]</td>\n",
+       "      <td>[2]</td>\n",
+       "      <td>['B09K3557Q8']</td>\n",
+       "      <td>['https://www.amazon.com/gp/customer-reviews/R...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Customer Expectations</td>\n",
+       "      <td>Plant growth expectations</td>\n",
+       "      <td>0.994206</td>\n",
+       "      <td>0.001794</td>\n",
+       "      <td>[5]</td>\n",
+       "      <td>[10]</td>\n",
+       "      <td>['B0BNPLKNJB']</td>\n",
+       "      <td>['https://www.amazon.com/gp/customer-reviews/R...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Customer Expectations</td>\n",
+       "      <td>Sturdy and functional gardening space</td>\n",
+       "      <td>0.943908</td>\n",
+       "      <td>0.004142</td>\n",
+       "      <td>[5]</td>\n",
+       "      <td>[8]</td>\n",
+       "      <td>['B0BM5ZJWQP']</td>\n",
+       "      <td>['https://www.amazon.com/gp/customer-reviews/R...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Customer Expectations</td>\n",
+       "      <td>To help tremendously with gardening</td>\n",
+       "      <td>0.993381</td>\n",
+       "      <td>0.002647</td>\n",
+       "      <td>[5]</td>\n",
+       "      <td>[5]</td>\n",
+       "      <td>['B0BGND2M55']</td>\n",
+       "      <td>['https://www.amazon.com/gp/customer-reviews/R...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14.285714</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Attribute                          cluster_label  \\\n",
+       "7   Customer Expectations     Durable and easy-to-use raised bed   \n",
+       "8   Customer Expectations                            Durable bed   \n",
+       "9   Customer Expectations                          Easy assembly   \n",
+       "10  Customer Expectations           Good size and sturdy product   \n",
+       "11  Customer Expectations              Plant growth expectations   \n",
+       "12  Customer Expectations  Sturdy and functional gardening space   \n",
+       "13  Customer Expectations    To help tremendously with gardening   \n",
+       "\n",
+       "    positive_sentiment  negative_sentiment Rating    id            asin  \\\n",
+       "7             0.989524            0.001497    [5]   [6]  ['B09D7QDLYC']   \n",
+       "8             0.774938            0.053037    [3]   [3]  ['B0BG2HP1PJ']   \n",
+       "9             0.003215            0.937854    [2]   [9]  ['B0BHS6YL2F']   \n",
+       "10            0.986625            0.001518    [5]   [2]  ['B09K3557Q8']   \n",
+       "11            0.994206            0.001794    [5]  [10]  ['B0BNPLKNJB']   \n",
+       "12            0.943908            0.004142    [5]   [8]  ['B0BM5ZJWQP']   \n",
+       "13            0.993381            0.002647    [5]   [5]  ['B0BGND2M55']   \n",
+       "\n",
+       "                                                  URL  observation_count  \\\n",
+       "7   ['https://www.amazon.com/gp/customer-reviews/R...                  1   \n",
+       "8   ['https://www.amazon.com/gp/customer-reviews/R...                  1   \n",
+       "9   ['https://www.amazon.com/gp/customer-reviews/R...                  1   \n",
+       "10  ['https://www.amazon.com/gp/customer-reviews/R...                  1   \n",
+       "11  ['https://www.amazon.com/gp/customer-reviews/R...                  1   \n",
+       "12  ['https://www.amazon.com/gp/customer-reviews/R...                  1   \n",
+       "13  ['https://www.amazon.com/gp/customer-reviews/R...                  1   \n",
+       "\n",
+       "    rating_avg  attribute_percentage  \n",
+       "7            5             14.285714  \n",
+       "8            3             14.285714  \n",
+       "9            2             14.285714  \n",
+       "10           5             14.285714  \n",
+       "11           5             14.285714  \n",
+       "12           5             14.285714  \n",
+       "13           5             14.285714  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attributes[attributes['Attribute'] ==  'Customer Expectations']"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "oaie",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
