--- a/notebooks/Data_Solutions_step_1_problem_description.ipynb
+++ b/notebooks/Data_Solutions_step_1_problem_description.ipynb
@@ -404,42 +404,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# v2\n",
     "problem_statement_function = [\n",
-    "\n",
-    "\n",
-    "    \n",
     "    {\n",
     "        \"name\": \"problem_statement_function\",\n",
-    "        \"description\": \"Clearly identify and describe a single issue or problem of a product sold on Amazon given a set of customer complaints and a product description.\", \n",
+    "        \"description\": \"\"\"This function is designed to isolate and describe a singular, primary issue with a product being sold on Amazon, using the data from customer complaints and the product's description. \n",
+    "        Example Output:     \n",
+    "            \"problem_identification\": \"Lack of durability and insufficient planting space\",\n",
+    "            \"problem_statement\": \"The garden beds are perceived as flimsy and require additional support. They also appear to provide less planting space than customers expected.\",\n",
+    "            \"customer_voice_examples\": [\n",
+    "                \"The garden beds are flimsy and require additional support with wood framing.\", \n",
+    "                \"Wished for more room for additional grow beds\", \n",
+    "                \"Oval-shaped box loses a little planting space, but not worried about it at this time\"\n",
+    "                ]\"\"\",\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
     "            \"properties\": {\n",
     "                \"problem_identification\": {\n",
-    "                \"type\": \"string\",\n",
-    "                \"description\": \"Identify one single most important problem of the product from the presented data\" \n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"From the given data, identify and articulate the key problem or issue with the product.\" \n",
     "                },\n",
     "                \"problem_statement\": {\n",
     "                    \"type\": \"string\",\n",
-    "                    \"description\": \"Describe the identified problem based on these OBSERVATIONS. [200 words].\" \n",
+    "                    \"description\": \"Elaborate on the identified problem, providing a detailed statement based on the observations made. This should be within a range of 200 words.\" \n",
     "                },\n",
     "                \"customer_voice_examples\": {\n",
     "                    \"type\": \"string\",\n",
-    "                    \"description\": \"Select relevant quotes from the received customer complaints to further clarify and enforce what the problem is [10 - 200 words]\" \n",
+    "                    \"description\": \"Select and provide quotes from customer complaints which further detail the problem and illustrate its impact. This should be up to 10 examples and within a range of 10 - 200 words.\" \n",
     "                },\n",
     "            },\n",
-    "            \"required\": [\"problem_identification\", \"problem_statement\", \"customer_voice_examples\" ]\n",
-    "        },\n",
+    "            \"required\": [\"problem_identification\", \"problem_statement\", \"customer_voice_examples\"]\n",
+    "        }\n",
     "    }\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,13 +463,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Durability and planting space',\n",
+       " 'No issues',\n",
        " 'Difficult assembly',\n",
        " 'No specific issues mentioned',\n",
        " 'Hardware issues',\n",
@@ -471,7 +478,7 @@
        " 'Product damage and missing parts']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +498,7 @@
        "'No issues'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,95 +568,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cluster_label</th>\n",
+       "      <th>Attribute</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Durability and planting space</td>\n",
+       "      <td>Issues</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Difficult assembly</td>\n",
+       "      <td>Issues</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>No specific issues mentioned</td>\n",
+       "      <td>Issues</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hardware issues</td>\n",
+       "      <td>Issues</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Flimsy and easily damaged</td>\n",
+       "      <td>Issues</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Product damage and missing parts</td>\n",
+       "      <td>Issues</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'index': 0,\n",
-       " 'message': {'role': 'assistant',\n",
-       "  'content': None,\n",
-       "  'function_call': {'name': 'problem_statement_function',\n",
-       "   'arguments': '{\\n  \"problem_identification\": \"Product damage and missing parts\",\\n  \"problem_statement\": \"Based on the customer complaints, the main issue with the product is that it arrives damaged and with missing parts. Customers have reported receiving bent and scratched pieces, damaged planters, and boxes that appear to have been tampered with. Some customers have also mentioned missing nuts, bolts, and other hardware necessary for assembly. This not only leads to a poor initial impression of the product but also hinders the assembly process and affects the overall functionality of the garden bed. Additionally, customers have expressed frustration with the return process, mentioning expensive return costs and the need for disassembly and repacking. Overall, the product\\'s quality control and packaging seem to be inadequate, resulting in a negative customer experience.\",\\n  \"customer_voice_examples\": \"1. \\'The pieces are bent and don\\'t line up, the product is hideously scratched up\\'\\\\n2. \\'2 out of 3 planters were damaged and return process is expensive\\'\\\\n3. \\'The product arrived damaged.\\'\\\\n4. \\'One box appeared to be returned and spilled parts, dented panels\\'\\\\n5. \\'The product arrived with bent corners, which was disappointing.\\'\\\\n6. \\'The product broke after a few uses\\'\\\\n7. \\'Box arrived damaged and missing parts\\'\\\\n8. \\'One end of the box was partially opened and some nuts and bolts were missing\\'\\\\n9. \\'Received beat up with parts everywhere\\'\\\\n10. \\'Company needs to send a return label\\'\\\\n11. \\'Open box and labeling issues\\'\\\\n12. \\'Shipping damage affected assembly\\'\\\\n13. \\'Package arrived in poor condition, panels were scratched and dented, rods were not wrapped, and the screwdriver provided was too small for the screws.\\'\\\\n14. \\'Ordered two, one was mangled by delivery service\\'\\\\n15. \\'Box arrived damaged and someone has tampered with it by removing screws and braces\\'\\\\n16. \\'Arrive all banged up, returned\\'\\\\n17. \\'Seller tried to contact the reviewer and may have tampered with the review\\'\\\\n18. \\'Disassembly and repacking required for return, terrible instructions\\'\"\\n}'}},\n",
-       " 'finish_reason': 'stop'}"
+       "                      cluster_label Attribute\n",
+       "0     Durability and planting space    Issues\n",
+       "1                Difficult assembly    Issues\n",
+       "2      No specific issues mentioned    Issues\n",
+       "3                   Hardware issues    Issues\n",
+       "4         Flimsy and easily damaged    Issues\n",
+       "5  Product damage and missing parts    Issues"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chat_response"
+    "df_problem_statements = pd.DataFrame(product_issues_list, columns=['cluster_label'])\n",
+    "df_problem_statements['Attribute'] = 'Issues'\n",
+    "df_problem_statements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "User_Prompt_1 = f\"\"\"\\\n",
-    "Form a problem statement\n",
+    "eval_responses = []\n",
+    "for item in problem_statements:\n",
+    "    data = item['message']['function_call']['arguments']\n",
+    "    # Replace 'null' with 'None' in the data string before evaluation\n",
+    "    data = data.replace('null', 'None')\n",
+    "    eval_data = eval(data)\n",
+    "    eval_responses.append(eval_data)\n",
     "\n",
-    "\\\n",
-    "{general_product_data}\n",
-    "\\\n",
-    "Output will be a JSON file with the following structure:\n",
-    "```\\\n",
-    "'Main Problem Statement ': ...[400 words],\\\n",
-    "\n",
-    "\"\"\""
+    "df_problem_statements['problem_statement'] = eval_responses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"\"\"\n",
-    "We have received several customer complaints and feedback about a product, the Raised Garden Bed. The complaints are as follows:\n",
-    "\n",
-    "[INSERT COMPLAINTS HERE]\n",
-    "\n",
-    "The product's description is as follows:\n",
-    "\n",
-    "[INSERT PRODUCT DESCRIPTION HERE]\n",
-    "\n",
-    "Using the 5W2H methodology, please perform a detailed analysis to help us understand the problem better. Answer the following questions:\n",
-    "\n",
-    "1. Who is affected by the problem?\n",
-    "2. What is the problem specifically?\n",
-    "3. Where is the problem occurring?\n",
-    "4. When does the problem occur?\n",
-    "5. Why might the problem be happening?\n",
-    "6. How does the problem occur?\n",
-    "7. How much does the problem affect the customers or the company?\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AI_Prompt_1 = \"\"\"\n",
-    "{\\\n",
-    "\"Problem Statement\": \"The product, a magnetic drawing board set, has been reported to have multiple issues related to the stylus pen's durability, lack of a backup stylus, and no established method to secure the pen to the board. These problems have led to user dissatisfaction, negatively impacting the overall perceived value and marketability of the product.\",\\\n",
-    "\"Solution 1\": {\\\n",
-    "\"Title\": \"Upgrading the Quality and Durability of the Stylus Pen\",\\\n",
-    "\"Description\": \"Enhance the overall durability of the stylus pen by exploring new materials and design modifications. Instead of using a simple coating, which appears to wear off quickly, a comprehensive review of the pen design should be conducted. A shift towards a robust, wear-resistant material like high-density polyethylene (HDPE) or polycarbonate could provide a long-lasting solution. Additionally, considering a full-body design rather than a coated one could mitigate the issue of the coating coming off. This upgraded design should undergo rigorous testing to ensure it withstands regular use without significant wear or tear, ultimately prolonging the lifespan of the pen and enhancing customer satisfaction.\"},\\\n",
-    "\"Solution 2\": {\\\n",
-    "\"Title\": \"Including a Backup Stylus Pen in the Product Package\",\\\n",
-    "\"Description\": \"Inclusion of an extra stylus pen in the package serves as a fail-safe in situations where the primary pen gets lost or damaged. This feature would significantly enhance user convenience, as they will not have to source a replacement pen separately. However, to implement this, a cost-benefit analysis should be conducted to ensure that the additional production and packaging costs do not adversely affect the product's price point. Additionally, steps should be taken to communicate this additional feature clearly on the product packaging and marketing materials to inform the potential buyers about the added value they will receive.\"},\\\n",
-    "\"Solution 3\": {\\\n",
-    "\"Title\": \"Designing a Mechanism to Secure the Stylus to the Drawing Board\",\\\n",
-    "\"Description\": \"To prevent the stylus from being misplaced or lost, a mechanism should be incorporated into the product design to secure the pen to the board. Various approaches could be considered, such as a designated slot, magnetic attachment, or retractable cord system. A designated slot could be integrated into the product's mold design, whereas a magnetic attachment would require an embedded magnet in the stylus and a corresponding magnet or metallic plate on the board. A retractable cord system would involve attaching the pen to the board via a cord that can be pulled out for use and automatically retracts when released. Each of these solutions provides a unique balance between user convenience and production costs, and a thorough analysis should be conducted to determine the most suitable option based on user needs, manufacturing feasibility, and cost implications.\"}\\\n",
-    "}\\\n",
-    "\"\"\""
+    "df_problem_statements_path = '/Users/vladbordei/Documents/Development/ProductExplorer/data/interim/problem_statements.csv'\n",
+    "df_problem_statements.to_csv(df_problem_statements_path, index = False)"
    ]
   }
  ],
