added the solution generation step

--- a/notebooks/Data_Reviews_step_3_clustering.ipynb
+++ b/notebooks/Data_Reviews_step_3_clustering.ipynb
@@ -37,7 +37,7 @@
     "import requests\n",
     "from tenacity import retry, wait_random_exponential, stop_after_attempt\n",
     "\n",
-    "GPT_MODEL = \"gpt-3.5-turbo-0613\""
+    "GPT_MODEL = \"gpt-3.5-turbo\""
    ]
   },
   {
