--- a/notebooks/Data_Products_step_2_extraction.ipynb
+++ b/notebooks/Data_Products_step_2_extraction.ipynb
@@ -39,7 +39,7 @@
     "else:\n",
     "    print (\"OPENAI_API_KEY environment variable not found\")\n",
     "\n",
-    "GPT_MODEL = \"gpt-3.5-turbo-0613\""
+    "GPT_MODEL = \"gpt-3.5-turbo\""
    ]
   },
   {
