--- a/notebooks/Data_Products_step_3_insights.ipynb
+++ b/notebooks/Data_Products_step_3_insights.ipynb
@@ -43,7 +43,7 @@
     "# from sqlalchemy import create_engine, text\n",
     "# engine = create_engine('postgresql://postgres:mysecretpassword@localhost:5432/postgres')\n",
     "\n",
-    "GPT_MODEL = \"gpt-3.5-turbo-0613\""
+    "GPT_MODEL = \"gpt-3.5-turbo\""
    ]
   },
   {
