--- a/notebooks/Data_Reviews_step_2b_data_extraction.ipynb
+++ b/notebooks/Data_Reviews_step_2b_data_extraction.ipynb
@@ -72,7 +72,7 @@
     "# HUGGINGFACEHUB_API_TOKEN = getpass()\n",
     "\n",
     "\n",
-    "GPT_MODEL = \"gpt-3.5-turbo-0613\""
+    "GPT_MODEL = \"gpt-3.5-turbo\""
    ]
   },
   {
