--- a/notebooks/Data_Solutions_step_1_problem_statement.ipynb
+++ b/notebooks/Data_Solutions_step_1_problem_statement.ipynb
@@ -35,7 +35,7 @@
     "else:\n",
     "    print (\"OPENAI_API_KEY environment variable not found\")\n",
     "\n",
-    "GPT_MODEL = \"gpt-3.5-turbo-0613\""
+    "GPT_MODEL = \"gpt-3.5-turbo\""
    ]
   },
   {
@@ -408,7 +408,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# v2\n",
     "problem_statement_function = [\n",
     "    {\n",
     "        \"name\": \"problem_statement_function\",\n",
