finished general product solutions

--- a/notebooks/Data_Reviews_step_3_clustering.ipynb
+++ b/notebooks/Data_Reviews_step_3_clustering.ipynb
@@ -21,6 +21,10 @@
     "from openai.embeddings_utils import get_embedding\n",
     "from sklearn.cluster import AgglomerativeClustering\n",
     "\n",
+    "#https://github.com/itayzit/openai-async\n",
+    "import openai_async\n",
+    "\n",
+    "\n",
     "import os\n",
     "import openai\n",
     "from dotenv import load_dotenv\n",
@@ -37,7 +41,7 @@
     "import requests\n",
     "from tenacity import retry, wait_random_exponential, stop_after_attempt\n",
     "\n",
-    "GPT_MODEL = \"gpt-3.5-turbo\""
+    "GPT_MODEL = \"gpt-3.5-turbo\"\n"
    ]
   },
   {
@@ -605,13 +609,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
    "outputs": [],
@@ -973,13 +970,13 @@
     "labeling_function = [\n",
     "    {\n",
     "        \"name\": \"cluster_label\",\n",
-    "        \"description\": \"Provide a single label for the topic represented in the list of values.\",\n",
+    "        \"description\": \"Provide a single label for the topic represented in the list of values. \",\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
     "            \"properties\": {\n",
     "                \"cluster_label\": {\n",
     "                    \"type\": \"string\",\n",
-    "                    \"description\": \"Provide a single label for the topic represented in the list of values. [7 words max]. Example: 'Low perceived quality versus competitors', 'Breaks easily and often', 'low sound quality','better than expected'',' \"\n",
+    "                    \"description\": \"Provide a single label for the topic represented in the list of values. [7 words]. Example: 'Low perceived quality versus competitors', 'the assembly kit breaks easily and often', 'the speaker has a low sound quality','the taste was better than expected'',' \"\n",
     "                },\n",
     "            },\n",
     "            \"required\": [\"cluster_label\"]\n",
